--- a/getdm.ipynb
+++ b/getdm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,6 +169,154 @@
    ],
    "source": [
     "extract_matrix_elements(lines[3480:3501])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"/home/kokokos/TFM/PH+/so-pecs/mrci-PHM-006.out\") as f:\n",
+    "    lines = f.readlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Expectation', 'values', '<i|DMZ|i>']\n",
+      "[]\n",
+      "['STATE:', '1', '2', '3', '4', '5', '6', '7', '8']\n",
+      "['VALUE:', '0.329517', '0.329517', '0.329236', '0.329236', '0.021908', '0.021908', '0.021915', '0.021915']\n",
+      "0.329517 0 0\n",
+      "0.329517 0 1\n",
+      "0.329236 0 2\n",
+      "0.329236 0 3\n",
+      "0.021908 0 4\n",
+      "0.021908 0 5\n",
+      "0.021915 0 6\n",
+      "0.021915 0 7\n",
+      "[]\n",
+      "['STATE:', '9', '10', '11', '12', '13', '14', '15', '16']\n",
+      "['VALUE:', '0.081754', '0.081754', '0.081619', '0.081619', '0.222591', '0.222591', '0.094382', '0.094382']\n",
+      "0.081754 1 8\n",
+      "0.081754 1 9\n",
+      "0.081619 1 10\n",
+      "0.081619 1 11\n",
+      "0.222591 1 12\n",
+      "0.222591 1 13\n",
+      "0.094382 1 14\n",
+      "0.094382 1 15\n",
+      "[]\n",
+      "['STATE:', '17', '18', '19', '20', '21', '22', '23', '24']\n",
+      "['VALUE:', '0.714423', '0.714423', '-0.125218', '-0.125218', '-0.125518', '-0.125518', '0.419519', '0.419519']\n",
+      "0.714423 2 16\n",
+      "0.714423 2 17\n",
+      "-0.125218 2 18\n",
+      "-0.125218 2 19\n",
+      "-0.125518 2 20\n",
+      "-0.125518 2 21\n",
+      "0.419519 2 22\n",
+      "0.419519 2 23\n",
+      "[]\n",
+      "['STATE:', '25', '26', '27', '28', '29', '30', '31', '32']\n",
+      "['VALUE:', '0.419554', '0.419554', '0.419332', '0.419332', '0.419389', '0.419389', '0.492558', '0.492558']\n",
+      "0.419554 3 24\n",
+      "0.419554 3 25\n",
+      "0.419332 3 26\n",
+      "0.419332 3 27\n",
+      "0.419389 3 28\n",
+      "0.419389 3 29\n",
+      "0.492558 3 30\n",
+      "0.492558 3 31\n",
+      "[]\n",
+      "['STATE:', '33', '34']\n",
+      "['VALUE:', '0.493206', '0.493206']\n",
+      "0.493206 4 32\n",
+      "0.493206 4 33\n",
+      "[]\n",
+      "[]\n",
+      "5396 5414\n"
+     ]
+    }
+   ],
+   "source": [
+    "istart, istop = [], []\n",
+    "i,j = 0, 0\n",
+    "check = False\n",
+    "\n",
+    "nstates = 34\n",
+    "\n",
+    "dm_tot = np.zeros((nstates,nstates))\n",
+    "\n",
+    "for iline, line in enumerate(lines):\n",
+    "    if \"Expectation values <i|DMZ|i>\" in line:\n",
+    "        #istart.append(iline)\n",
+    "        istart = iline\n",
+    "        check = True\n",
+    "    if 'Transition matrix elements <i|DMZ|1>' in line and check:\n",
+    "        #istop.append(iline)\n",
+    "        istop = iline\n",
+    "        check = False\n",
+    "\n",
+    "get_DM(lines[istart:istop],nstates)\n",
+    "\n",
+    "print(istart,istop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_DM(lines,nstates):\n",
+    "    n_el = 8\n",
+    "    num_lines = int(nstates/8)\n",
+    "    last_line = int(nstates%8)\n",
+    "    dm = np.zeros((nstates,nstates))\n",
+    "\n",
+    "    n=0\n",
+    "    for line in lines:\n",
+    "        splited = line.split()\n",
+    "        print(splited)\n",
+    "        if \"VALUE:\" in splited and n != num_lines:\n",
+    "            for i in range(n_el):\n",
+    "                nel = n*8+i \n",
+    "                dm[nel,nel] = float(splited[i+1])\n",
+    "                print(dm[nel,nel],n,nel)\n",
+    "            n += 1\n",
+    "        elif \"VALUE:\" in splited and n == num_lines:\n",
+    "            for i in range(last_line):\n",
+    "                nel = n*8+i \n",
+    "                dm[nel,nel] = float(splited[i+1])\n",
+    "                print(dm[nel,nel],n,nel)\n",
+    "\n",
+    "    return dm\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(int(34/8),34%8)"
    ]
   },
   {
